# hw_22_new

./: README.md  catalog.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_flag_publication_post_is_published.py
blog/templates/blog/: post_delete.html  post_detail.html  post_edit.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/: base.html  home.html  product_info.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_form.html  product_info.html
catalog/templates/catalog/includes/: inc_one_product.html  inc_products.html
catalog/templates/includes/: inc_one_product.html  inc_products.html
config/: settings.py  urls.py
